feat: Refactor HighLevel SDK structure and improve OAuth handling
- Renamed `default-client.ts` to `base.ts` to better reflect its role as a foundational client.
- Consolidated OAuth-related imports and classes, enhancing clarity and maintainability.
- Introduced a new `createWebhooksClient` function for handling HighLevel webhooks with type safety and validation.
- Updated README to provide clearer examples for client instantiation and error handling.
- Enhanced error handling in OAuth client to throw more specific errors with context.
- Added support for multiple client configurations, including private integrations and OAuth.
- Modified `tsconfig.json` settings for better type-checking and module resolution.
- Updated dependencies to their latest versions to ensure compatibility and security.
- Cleaned up unnecessary imports and improved code organization across various client files.

--- a/examples/bun-auth/tsconfig.json
+++ b/examples/bun-auth/tsconfig.json
@@ -15,7 +15,6 @@
 		"paths": {
 			"@/*": ["src/*"]
 		},
-		"preserveSymlinks": true,
 		"resolveJsonModule": true,
 		"skipDefaultLibCheck": true,
 		"skipLibCheck": true,
@@ -24,5 +23,5 @@
 		"target": "ESNext",
 		"verbatimModuleSyntax": true
 	},
-	"include": ["src"]
+	"include": ["src/**/*"]
 }
