--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,10 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.experimental.updateImportsOnPaste": true,
-  "typescript.preferences.importModuleSpecifier": "project-relative",
-  "typescript.suggest.paths": false,
-  "json.schemas": [
-    {
-      "fileMatch": [
-          "schemas/**/*openapi.json"
-      ],
-      "url":"https://spec.openapis.org/oas/3.1/dialect/base"
-    }
-  ],
-  "json.schemaDownload.enable": true
-
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "json.schemas": [
+        {
+            "fileMatch": ["schemas/**/*openapi.json"],
+            "url": "https://spec.openapis.org/oas/3.1/dialect/base"
+        }
+    ],
+    "json.schemaDownload.enable": true
 }
