--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -1,14 +1,13 @@
 {
 	"dependencies": {
 		"@gnosticdev/highlevel-sdk": "file:../../",
-		"hono": "^4.6.3"
+		"hono": "^4.6.14"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.1.11",
-		"typescript": "^5.6.3"
+		"@types/bun": "^1.1.11"
 	},
 	"license": "MIT",
-	"name": "@gnosticdev/highlevel-bun-auth",
+	"name": "@gnosticdev/highlevel-sdk-bun-auth",
 	"private": false,
 	"scripts": {
 		"clean-install": "rm -rf node_modules && bun install",
