chore: remove bun.lock file and update bunfig.toml and db.ts for production
- Deleted bun.lock file, which is a good way to keep things clean and avoid unnecessary clutter.
- Updated bunfig.toml to set `install.production` to true and added `install.cache` to disable caching. Because who needs caching in production, right?
- Refactored db.ts to change the parameter name from `dbRow` to `tokenData` in the `saveTokenResponse` function for clarity. Apparently, being clear is now a thing.
- Adjusted the import order in index.tsx to import `Database` before `HighLevelOauthConfig`, because why not keep it tidy?

--- a/examples/bun-auth/bunfig.toml
+++ b/examples/bun-auth/bunfig.toml
@@ -1,2 +1,3 @@
 install.saveTextLockfile = true
-install.production       = false
+install.production       = true
+install.cache            = { disable = true }
