--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/bun": "^1.1.6",
+		"jsdom": "25.0.1",
 		"kleur": "^4.1.5",
 		"lefthook": "^1.10.0",
 		"openapi-typescript": "7.4.4",
@@ -80,7 +81,7 @@
 		"url": "https://github.com/gnosticdev/highlevel-sdk"
 	},
 	"scripts": {
-		"build": "bun --bun tsup",
+		"build": "bun tsup",
 		"fetch-json": "bun scripts/fetch-json.ts",
 		"generate-all": "bun run fetch-json && bun run generate-v2-types && bun run generate-v1-types && bun run generate-webhooks && bun run generate-scopes && bun run generate-interface",
 		"generate-interface": "bun scripts/generate-interface.ts",
