--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "moduleDetection": "force",
         "moduleResolution": "Bundler",
         "noEmit": true,
+        "isolatedModules": true,
         "noUncheckedIndexedAccess": true,
         "resolveJsonModule": true,
         "skipDefaultLibCheck": true,
