--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
         "moduleDetection": "force",
         "moduleResolution": "Bundler",
         "noEmit": true,
-        "isolatedModules": true,
         "noUncheckedIndexedAccess": true,
         "resolveJsonModule": true,
         "skipDefaultLibCheck": true,
@@ -19,5 +18,5 @@
         "verbatimModuleSyntax": true
     },
     "exclude": ["examples/**/*"],
-    "include": ["src/**/*", "__tests__/**/*"]
+    "include": ["src/**/*", "__tests__/**/*", "scripts/**/*"]
 }
