feat: add support for blogs, custom menus, emails, and email isv
- Added new endpoints for handling live chat typing events and bulk deletion of social media posts.
- Introduced new schemas for blog posts and custom menus, enhancing the API capabilities.
- Refactored webhook schemas to include new event types and updated existing ones for better clarity.
- Improved error handling with detailed responses for various operations including email verification and invoice management.
- Updated user-related schemas to include new fields for better user management and tracking.
- Refined OpenAPI definitions for better integration and documentation clarity.
- Added support for new media types and enhanced functionality for handling media uploads.

This commit brings in substantial updates, so make sure to read through the documentation for any breaking changes!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		"strict": true,
 		"strictNullChecks": true,
 		"target": "ESNext",
-		"types": ["bun", "node"],
+		"types": ["bun", "node", "./env.d.ts"],
 		"verbatimModuleSyntax": true
 	},
 	"exclude": ["examples/**/*"],
