--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"description": "SDK for the HighLevel API",
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "2.0.5",
 		"@types/bun": "^1.1.6",
 		"jsdom": "25.0.1",
 		"kleur": "^4.1.5",
