--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@gnosticdev/highlevel-sdk": "file:../../",
+		"@gnosticdev/highlevel-sdk": "latest",
 		"hono": "^4.6.14"
 	},
 	"devDependencies": {
