--- a/examples/bun-auth/package.json
+++ b/examples/bun-auth/package.json
@@ -1,10 +1,10 @@
 {
 	"dependencies": {
-		"@gnosticdev/highlevel-sdk": "latest",
-		"hono": "^4.6.14"
+		"@gnosticdev/highlevel-sdk": "link:../../../../dist/",
+		"hono": "^4.8.2"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.1.11"
+		"@types/bun": "^1.2.17"
 	},
 	"license": "MIT",
 	"name": "@gnosticdev/highlevel-sdk-bun-auth",
