refactor: restructure v2 client into modular oauth scopes and webhook systems; add in-memory token storage and webhook types
- Introduced a modular v2 client architecture
  - Added new base client scaffolding and type wiring across v2 client, oauth, scopes, and webhooks
  - Implemented a new BaseHighLevelClient class template to support per-endpoint clients

- OAuth and token storage enhancements
  - Added OauthClientImpl with in-memory storage and hook for customizable storage function
  - Implemented defaultMemoryStorageFunction and in-memory token store
  - Introduced in-memory webhook-friendly token handling path for tests and development

- Scopes and scopes builder
  - Added type definitions and builder for scopes
  - Created ScopesBuilder class to assemble and inspect scopes by access type (Agency vs Sub-Account)
  - Added Scopes types and a dedicated scope-types module
  - Included a helper to generate and expose a ScopesCollection for runtime usage

- Webhooks support and typing
  - Added WebhookEventMap and webhook-related types
  - Introduced a WebhooksClient to register handlers and safely dispatch webhook payloads
  - Added webhook public key module for signature reference
  - Created webhook types generator script and related webhook event map assembly

- Webhook types and OpenAPI integration
  - Added scripts and generators to create webhook types from json schemas
  - Added new public-key.ts and webhook types scaffolding under src/v2/webhooks
  - Created a dedicated webhook client file to manage event handlers

- API type and client surface updates
  - Updated v2 index and client interfaces to reflect new modular endpoints
  - Replaced several openapi path imports to align with new type paths (eg Agencies, Blogs, Locations, etc.)
  - Added transform-headers utilities to propagate auth headers cleanly

- Config and build tooling adjustments
  - Updated tsconfig build and tsconfig to accommodate new structure and noEmit behavior for dev
  - Added tsup-

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
 		}
 	],
 	"bun.test.enable": true,
+	"typescript.native-preview.tsdk": "node_modules/.bin/tsgo",
+	"typescript.experimental.useTsgo": true,
+	"typescript.preferences.importModuleSpecifier": "relative",
 
 	"json.schemaDownload.enable": true
 }
