--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
 
 	"css": {
 		"formatter": {
@@ -29,6 +29,9 @@
 		"parser": {
 			"allowComments": true,
 			"allowTrailingCommas": false
+		},
+		"formatter": {
+			"enabled": true
 		}
 	},
 	"linter": {
@@ -63,6 +66,12 @@
 	},
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"overrides": [
+		{
+			"formatter": {
+				"enabled": false
+			},
+			"includes": ["./package.json"]
+		},
 		{
 			"includes": ["**/*.js"],
 			"linter": {
