chore: update docs with customClient option. Add gh action to auto update types every week

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,3 +5,8 @@ pre-commit:
       glob: '**/*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc,css,astro}'
       run: bun biome check {staged_files} --write --unsafe --no-errors-on-unmatched --files-ignore-unknown=true && git update-index --again
       stage_fixed: true
+
+pre-push:
+  commands:
+    build:
+      run: bun run typecheck {staged_files}
