--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
 		"verbatimModuleSyntax": true
 	},
 	"include": ["**/*"],
-	"exclude": ["**/node_modules", "dist", "examples"]
+	"exclude": ["node_modules", "dist", "examples"]
 }
