chore: update package scripts and workflows; add new generate-all script and middleware for token refresh
- Added a new "biome" script to package.json for linting.
- Updated "generate-all" script to use a dedicated generate-all.ts file.
- Modified GitHub Actions workflow to use the latest Bun version.
- Introduced refreshTokenMiddleware in bun-auth example for handling token refresh logic.
- Enhanced JSON schema download script with formatting and linting steps.
- Fix AccessType import in generated-interface.ts script.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
 	"typescript.experimental.useTsgo": true,
 	"typescript.preferences.importModuleSpecifier": "relative",
 
-	"json.schemaDownload.enable": true
+	"json.schemaDownload.enable": true,
+	"sqltools.useNodeRuntime": true
 }
