--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -18,13 +18,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_TOKEN }}
+          persist-credentials: true
           fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.1.42
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
