--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -1,9 +1,9 @@
 name: Generate All Types
 
 on:
-  # Run weekly on Mondays at 00:00 UTC
+  # Run weekly on Mondays at 10:00 AM UTC
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 10 * * 1'
   # Allow manual triggering
   workflow_dispatch:
 
@@ -18,18 +18,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_TOKEN }}
+          persist-credentials: true
           fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.1.42
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
       - name: Run generate-all
+        env:
+          DOCS_API_URL: ${{ secrets.DOCS_API_URL }}
+          DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
+          DOCS_PASSWORD: ${{ secrets.DOCS_PASSWORD }}
         run: bun run generate-all
 
       - name: Check for changes
